Revert "trying not to zip the artifacts": https://github.com/actions/upload-artifact/issues/14#issuecomment-620728238
This reverts commit 7cbf9d6794c5f541d8530538e115b6cfd80924e1.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
         EVENTHORIZON: ${{ secrets.EVENTHORIZON }}
     - uses: actions/upload-artifact@v2
       with:
-        path: rel/*
+        path: rel/
